# SlicerParallelProcessing

./: CMakeLists.txt
